Added a short paragraoh about myself

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <h1>Hi everyone this is my change</h1>
+<h6>This is a short paragraph about me</h6>
+    <p> I get the money  I get the money  I get the money I get the money I get the money I get the money </p>
 </body>
 </html>
